--- a/Translations/German/text-eventStory-change.xml
+++ b/Translations/German/text-eventStory-change.xml
@@ -465,11 +465,10 @@ Die Kuppel der Hagia Sophia bleibt mit ursprünglich 33 Metern Spannweite bis zu
 </Translation>
 	</Entry>
 	<Entry>
-		<zType>TEXT_EVENTSTORY_WONDER_GRAND_BAZAAR</zType>
-		<Translation><![CDATA[Der Kapalı Çarşı, im Deutschen „Großer Basar“ genannt, ist ein Geschäftsviertel im alten Istanbuler Stadtteil Eminönü im Stadtviertel Beyazıt.<br>
-Der Große Basar erstreckt sich über 31.000 m2 und beherbergt rund 4.000 Geschäfte mit den verschiedensten Angeboten. Angelegt wurde er im 15. Jahrhundert unter Sultan Mehmet Fatih nach der Eroberung Konstantinopels.<br>
-Wie bei Basaren üblich, sind die Geschäfte im Großen Basar nach Branchen sortiert, was häufig auch an den Straßennamen zu erkennen ist (z. B. bei der Halıcı Sokagı, der Teppichhändlerstraße und bei der Sahaflar caddesi, der Antiquitätenhändlerstraße).<br>
-Außerhalb der Geschäftszeiten sind nicht nur die Läden, sondern auch die zahlreichen Eingänge zu den überdachten Gassen verschlossen.]]>
+		<zType>TEXT_EVENTSTORY_WONDER_VIA_RECTA_SOUK</zType>
+		<Translation><![CDATA[Die Altstadt von Damaskus gehört zum UNESCO-Welterbe in Syrien.
+Wegen der günstigen Lage an der Kreuzung wichtiger Handelswege ist die Altstadt von Damaskus einer der ältesten kontinuierlich bewohnten Orte weltweit. Die Umayyaden machten Damaskus zur Hauptstadt ihres Kalifats.
+Außer den mittelalterlichen Bauten, die von dieser Blütezeit zeugen, sind im Stadtbild auch Elemente hellenistischer, römischer und byzantinischer Architektur erkennbar. Insgesamt präsentiert sich die historische Altstadt dem Besucher heute in der Form, die sie seit der ottomanischen Eroberung am Anfang des 16. Jahrhunderts erhielt.]]>
 </Translation>
 	</Entry>
 	<Entry>
